--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 psycopg2-binary==2.9.10
+python-dotenv==1.0.1
 python-telegram-bot==21.9
 requests==2.32.3
 sniffio==1.3.1
