--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 anyio==4.7.0
 appnope==0.1.4
 asttokens==3.0.0
@@ -26,6 +27,7 @@ matplotlib==3.10.0
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 numpy==2.2.1
+ollama==0.4.7
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
@@ -37,6 +39,8 @@ psutil==6.1.1
 psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pydantic==2.10.6
+pydantic_core==2.27.2
 Pygments==2.19.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
@@ -51,6 +55,7 @@ soupsieve==2.6
 stack-data==0.6.3
 tornado==6.4.2
 traitlets==5.14.3
+typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
 wcwidth==0.2.13
