--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,13 @@ cycler==0.12.1
 debugpy==1.8.12
 decorator==5.1.1
 executing==2.2.0
+filelock==3.17.0
 fonttools==4.55.3
+fsspec==2024.12.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
+huggingface-hub==0.27.1
 idna==3.10
 ipykernel==6.29.5
 ipython==8.31.0
@@ -46,6 +49,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-telegram-bot==21.9
 pytz==2024.2
+PyYAML==6.0.2
 pyzmq==26.2.0
 requests==2.32.3
 six==1.17.0
@@ -53,6 +57,7 @@ sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.2
