--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ contourpy==1.3.1
 cycler==0.12.1
 debugpy==1.8.12
 decorator==5.1.1
+distro==1.9.0
 executing==2.2.0
 filelock==3.17.0
 fonttools==4.55.3
@@ -18,11 +19,11 @@ fsspec==2024.12.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
-huggingface-hub==0.27.1
 idna==3.10
 ipykernel==6.29.5
 ipython==8.31.0
 jedi==0.19.2
+jiter==0.9.0
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
@@ -30,6 +31,7 @@ matplotlib==3.10.0
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 numpy==2.2.1
+openai==1.75.0
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
